--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
     "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.18",
+    "@types/webpack-env": "^1.16.2",
     "cra-template-redux-typescript": "1.0.2",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
